Clipboard on mobile bug

--- a/src/styles/three_card_group.css
+++ b/src/styles/three_card_group.css
@@ -18,3 +18,7 @@ div.form-group {
 div.card-block {
   margin-bottom: 0;
 }
+
+div.card {
+  background-color: #eceeef;
+}
